[project]
name = "heimdall"
version = "0.1.0"
description = "A Python security testing and web application vulnerability scanning framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Avinier", email = "adisubu.2410@gmail.com" }
]
maintainers = [
    { name = "Avinier", email = "adisubu.2410@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
keywords = ["security", "testing", "vulnerability", "scanner", "penetration-testing", "web-security"]

dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "python-owasp-zap-v2.4>=0.0.22",
    "scapy>=2.5.0",
    "paramiko>=3.4.0",
    "pyjwt>=2.8.0",
    "urllib3>=2.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "coverage>=7.0.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/avinier/heimdall"
Documentation = "https://heimdall.readthedocs.io"
Repository = "https://github.com/avinier/heimdall"
Issues = "https://github.com/avinier/heimdall/issues"

[project.scripts]
heimdall = "heimdall:main"
heimdall-scan = "heimdall.orchestration.orchestration4:main"
heimdall-planner = "heimdall.agents.planner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["E501", "B008", "B905", "N818"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["src/heimdall"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
